infra/cilium/hubbleingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  labels:
    name: hubble-ui
spec:
  ingressClassName: nginx
  rules:
  - host: hubble.prod.prossertech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hubble-ui
            port: 
              number: 80
